Motoman/MotoComSDK/motocom32dll/Samples/MotocomDemoVB/MotoCom32.BAS


' /****************************************************/
' /****************   BSC     *************************/
' /****************************************************/
' /* bsc3.h */
' /*  "COM1:9600,E,8,1" */
Declare Function BscCancel Lib "MotoCom32" Alias "_BscCancel@4" (ByVal nCid%) As Integer
Declare Function BscChangeTask Lib "MotoCom32" Alias "_BscChangeTask@8" (ByVal nCid%, ByVal task%) As Integer
Declare Function BscClose Lib "MotoCom32" Alias "_BscClose@4" (ByVal nCid%) As Integer
'Declare Function BscCloseAll Lib "MotoCom32" Alias "_BscCloseAll@4" (ByVal nCiddummy%) As Integer
Declare Function BscCommand Lib "MotoCom32" Alias "_BscCommand@16" (ByVal nCid%, ByVal h_buf$, ByVal d_buf$, ByVal fforever%) As Integer
Declare Function BscConnect Lib "MotoCom32" Alias "_BscConnect@4" (ByVal nCid%) As Integer
Declare Function BscContinueJob Lib "MotoCom32" Alias "_BscContinueJob@4" (ByVal nCid%) As Integer
Declare Function BscConvertJobP2R Lib "MotoCom32" Alias "_BscConvertJobP2R@12" (ByVal nCid%, ByVal name_v$, ByVal framename$) As Integer
Declare Function BscConvertJobR2P Lib "MotoCom32" Alias "_BscConvertJobR2P@16" (ByVal nCid%, ByVal name_v$, ByVal cv_type%, ByVal var_no$) As Integer
Declare Function BscDCIGetPos Lib "MotoCom32" Alias "_BscDCIGetPos@16" (ByVal nCid%, type_v%, rconf%, p#) As Integer
Declare Function BscDCIGetPos2 Lib "MotoCom32" Alias "_BscDCIGetPos2@20" (ByVal nCid%, type_v%, rconf%, p#, axisNum%) As Integer
Declare Function BscDCIGetVarData Lib "MotoCom32" Alias "_BscDCIGetVarData@20" (ByVal nCid%, type_v%, rconf%, p#, ByVal s$) As Integer
Declare Function BscDCIGetVarDataEx Lib "MotoCom32" Alias "_BscDCIGetVarDataEx@24" (ByVal nCid%, type_v%, rconf&, p#, ByVal s$, axisNum%) As Integer
Declare Function BscDCILoadSave Lib "MotoCom32" Alias "_BscDCILoadSave@8" (ByVal nCid%, ByVal timec%) As Integer
Declare Function BscDCILoadSaveOnce Lib "MotoCom32" Alias "_BscDCILoadSaveOnce@4" (ByVal nCid%) As Integer
Declare Function BscDCIPutPos Lib "MotoCom32" Alias "_BscDCIPutPos@16" (ByVal nCid%, ByVal type_v%, ByVal rconf%, p#) As Integer
Declare Function BscDCIPutPos2 Lib "MotoCom32" Alias "_BscDCIPutPos2@20" (ByVal nCid%, ByVal type_v%, ByVal rconf%, p#, ByVal axisNum%) As Integer
Declare Function BscDCIPutVarData Lib "MotoCom32" Alias "_BscDCIPutVarData@20" (ByVal nCid%, ByVal type_v%, ByVal rconf%, p#, ByVal s$) As Integer
Declare Function BscDCIPutVarDataEx Lib "MotoCom32" Alias "_BscDCIPutVarDataEx@24" (ByVal nCid%, ByVal type_v%, ByVal rconf&, p#, ByVal s$, ByVal axisNum%) As Integer
'Declare Function BscDelay Lib "MotoCom32" Alias "_BscDelay@8" (ByVal nCid%, ByVal a&) As Integer
Declare Function BscDeleteJob Lib "MotoCom32" Alias "_BscDeleteJob@4" (ByVal nCid%) As Integer
Declare Function BscDisConnect Lib "MotoCom32" Alias "_BscDisConnect@4" (ByVal nCid%) As Integer
Declare Function BscDiskFreeSizeGet Lib "MotoCom32" Alias "_BscDiskFreeSizeGet@12" (ByVal nCid%, ByVal dno%, dsize&) As Integer
Declare Function BscDownLoad Lib "MotoCom32" Alias "_BscDownLoad@8" (ByVal nCid%, ByVal fname$) As Integer
Declare Function BscDownLoadEx Lib "MotoCom32" Alias "_BscDownLoadEx@16" (ByVal nCid%, ByVal fname$, ByVal srcPath$, ByVal nFlg As Boolean) As Integer
Declare Function BscEnforcedClose Lib "MotoCom32" Alias "_BscEnforcedClose@4" (ByVal nCid%) As Integer
Declare Function BscFindFirst Lib "MotoCom32" Alias "_BscFindFirst@12" (ByVal nCid%, ByVal fname$, ByVal size%) As Integer
Declare Function BscFindFirstMaster Lib "MotoCom32" Alias "_BscFindFirstMaster@12" (ByVal nCid%, ByVal fname$, ByVal size%) As Integer
Declare Function BscFindNext Lib "MotoCom32" Alias "_BscFindNext@12" (ByVal nCid%, ByVal fname$, ByVal size%) As Integer
Declare Function BscFindNextMaster Lib "MotoCom32" Alias "_BscFindNextMaster@12" (ByVal nCid%, ByVal fname$, ByVal size%) As Integer
'Declare Function BscGetAbso Lib "MotoCom32" Alias "_BscGetAbso@12" (ByVal nCid%, ByVal axisno%, abso&) As Integer
Declare Function BscGetCartPos Lib "MotoCom32" Alias "_BscGetCartPos@24" (ByVal nCid%, ByVal framename$, ByVal isex%, rconf&, toolno%, p#) As Integer
Declare Function BscGetCtrlGroup Lib "MotoCom32" Alias "_BscGetCtrlGroup@12" (ByVal nCid%, groupinf%, taskinf%) As Integer
Declare Function BscGetCtrlGroupDx Lib "MotoCom32" Alias "_BscGetCtrlGroupDx@16" (ByVal nCid%, robtask&, stattask&, taskinf%) As Integer
Declare Function BscGetCtrlGroupXrc Lib "MotoCom32" Alias "_BscGetCtrlGroupXrc@16" (ByVal nCid%, robtask%, stattask%, taskinf%) As Integer
Declare Function BscGetError Lib "MotoCom32" Alias "_BscGetError@4" (ByVal nCid%) As Integer
Declare Function BscGetError2 Lib "MotoCom32" Alias "_BscGetError2@4" (ByVal nCid%) As Integer
Declare Function BscGetFirstAlarm Lib "MotoCom32" Alias "_BscGetFirstAlarm@8" (ByVal nCid%, data_v%) As Integer
Declare Function BscGetFirstAlarmS Lib "MotoCom32" Alias "_BscGetFirstAlarmS@12" (ByVal nCid%, data_v%, ByVal s$) As Integer
Declare Function BscGetNextAlarm Lib "MotoCom32" Alias "_BscGetNextAlarm@8" (ByVal nCid%, data_v%) As Integer
Declare Function BscGetNextAlarmS Lib "MotoCom32" Alias "_BscGetNextAlarmS@12" (ByVal nCid%, data_v%, ByVal s$) As Integer
Declare Function BscGetPulsePos Lib "MotoCom32" Alias "_BscGetPulsePos@8" (ByVal nCid%, p#) As Integer
Declare Function BscGets Lib "MotoCom32" Alias "_BscGets@16" (ByVal nCid%, ByVal bufptr$, ByVal bsize%, plengets%) As Integer
Declare Function BscGetStatus Lib "MotoCom32" Alias "_BscGetStatus@12" (ByVal nCid%, d1%, d2%) As Integer
Declare Function BscGetUFrame Lib "MotoCom32" Alias "_BscGetUFrame@12" (ByVal nCid%, ByVal ufname$, p#) As Integer
Declare Function BscGetVarData Lib "MotoCom32" Alias "_BscGetVarData@16" (ByVal nCid%, ByVal type_v%, ByVal varno%, pos#) As Integer
Declare Function BscGetVarData2 Lib "MotoCom32" Alias "_BscGetVarData2@16" (ByVal nCid%, ByVal type_v%, ByVal varno%, pos#) As Integer
Declare Function BscGetVarDataEx Lib "MotoCom32" Alias "_BscGetVarDataEx@24" (ByVal nCid%, ByVal type_v%, ByVal varno%, pos#, ByVal s$, axisNum%) As Integer
Declare Function BscHoldOff Lib "MotoCom32" Alias "_BscHoldOff@4" (ByVal nCid%) As Integer
Declare Function BscHoldOn Lib "MotoCom32" Alias "_BscHoldOn@4" (ByVal nCid%) As Integer
Declare Function BscHostGetVarData Lib "MotoCom32" Alias "_BscHostGetVarData@20" (ByVal nCid%, ByVal type_v%, ByVal varno%, pos#, ByVal s$) As Integer
Declare Function BscHostGetVarDataM Lib "MotoCom32" Alias "_BscHostGetVarDataM@20" (ByVal nCid%, ByVal type_v%, ByVal varno%, ByVal num%, pos#) As Integer
Declare Function BscHostPutVarData Lib "MotoCom32" Alias "_BscHostPutVarData@20" (ByVal nCid%, ByVal type_v%, ByVal varno%, dat#, ByVal s$) As Integer
Declare Function BscHostPutVarDataM Lib "MotoCom32" Alias "_BscHostPutVarDataM@20" (ByVal nCid%, ByVal type_v%, ByVal varno%, ByVal num%, dat#) As Integer
Declare Function BscImov Lib "MotoCom32" Alias "_BscImov@28" (ByVal nCid%, ByVal vtype$, ByVal spd#, ByVal framename$, ByVal toolno%, p#) As Integer
Declare Function BscImovEx Lib "MotoCom32" Alias "_BscImovEx@32" (ByVal nCid%, ByVal vtype$, ByVal spd#, ByVal framename$, ByVal toolno%, p#, ByVal axisNum%) As Integer
Declare Function BscImovEx2 Lib "MotoCom32" Alias "_BscImovEx2@36" (ByVal nCid%, ByVal ctype%, ByVal vtype$, ByVal spd#, ByVal framename$, ByVal toolno%, p#, ByVal axisNum%) As Integer
Declare Function BscInBytes Lib "MotoCom32" Alias "_BscInBytes@4" (ByVal nCid%) As Integer
Declare Function BscIsAlarm Lib "MotoCom32" Alias "_BscIsAlarm@4" (ByVal nCid%) As Integer
Declare Function BscIsCtrlGroup Lib "MotoCom32" Alias "_BscIsCtrlGroup@4" (ByVal nCid%) As Integer
Declare Function BscIsCtrlGroupDx Lib "MotoCom32" Alias "_BscIsCtrlGroupDx@12" (ByVal nCid%, robtask&, stattask&) As Integer
Declare Function BscIsCtrlGroupXrc Lib "MotoCom32" Alias "_BscIsCtrlGroupXrc@12" (ByVal nCid%, robtask%, stattask%) As Integer
Declare Function BscIsCycle Lib "MotoCom32" Alias "_BscIsCycle@4" (ByVal nCid%) As Integer
Declare Function BscIsError Lib "MotoCom32" Alias "_BscIsError@4" (ByVal nCid%) As Integer
Declare Function BscIsErrorCode Lib "MotoCom32" Alias "_BscIsErrorCode@4" (ByVal nCid%) As Integer
Declare Function BscIsHold Lib "MotoCom32" Alias "_BscIsHold@4" (ByVal nCid%) As Integer
Declare Function BscIsJobLine Lib "MotoCom32" Alias "_BscIsJobLine@4" (ByVal nCid%) As Integer
Declare Function BscIsJobName Lib "MotoCom32" Alias "_BscIsJobName@12" (ByVal nCid%, ByVal jobname$, ByVal size%) As Integer
Declare Function BscIsJobStep Lib "MotoCom32" Alias "_BscIsJobStep@4" (ByVal nCid%) As Integer
Declare Function BscIsLoc Lib "MotoCom32" Alias "_BscIsLoc@16" (ByVal nCid%, ByVal ispulse%, rconf%, p#) As Integer
Declare Function BscIsPlayMode Lib "MotoCom32" Alias "_BscIsPlayMode@4" (ByVal nCid%) As Integer
Declare Function BscIsRemoteMode Lib "MotoCom32" Alias "_BscIsRemoteMode@4" (ByVal nCid%) As Integer
Declare Function BscIsRobotPos Lib "MotoCom32" Alias "_BscIsRobotPos@24" (ByVal nCid%, ByVal framename$, ByVal isex%, rconf%, toolno%, p#) As Integer
Declare Function BscIsServo Lib "MotoCom32" Alias "_BscIsServo@4" (ByVal nCid%) As Integer
Declare Function BscIsTaskInf Lib "MotoCom32" Alias "_BscIsTaskInf@4" (ByVal nCid%) As Integer
Declare Function BscIsTaskInfDx Lib "MotoCom32" Alias "_BscIsTaskInfDx@4" (ByVal nCid%) As Integer
Declare Function BscIsTaskInfXrc Lib "MotoCom32" Alias "_BscIsTaskInfXrc@4" (ByVal nCid%) As Integer
Declare Function BscIsTeachMode Lib "MotoCom32" Alias "_BscIsTeachMode@4" (ByVal nCid%) As Integer
Declare Function BscJobWait Lib "MotoCom32" Alias "_BscJobWait@8" (ByVal nCid%, ByVal time%) As Integer
Declare Function BscMDSP Lib "MotoCom32" Alias "_BscMDSP@8" (ByVal nCid%, ByVal ptr$) As Integer
Declare Function BscMov Lib "MotoCom32" Alias "_BscMov@36" (ByVal nCid%, ByVal movtype$, ByVal vtype$, ByVal spd#, ByVal framename$, ByVal rconf%, ByVal toolno%, p#) As Integer
Declare Function BscMovEx Lib "MotoCom32" Alias "_BscMovEx@40" (ByVal nCid%, ByVal movtype$, ByVal vtype$, ByVal spd#, ByVal framename$, ByVal rconf&, ByVal toolno%, p#, ByVal axisNum%) As Integer
Declare Function BscMovEx2 Lib "MotoCom32" Alias "_BscMovEx2@44" (ByVal nCid%, ByVal ctype%, ByVal movtype$, ByVal vtype$, ByVal spd#, ByVal framename$, ByVal rconf&, ByVal toolno%, p#, ByVal axisNum%) As Integer
Declare Function BscMovj Lib "MotoCom32" Alias "_BscMovj@28" (ByVal nCid%, ByVal spd#, ByVal framename$, ByVal rconf%, ByVal toolno%, p#) As Integer
Declare Function BscMovjEx Lib "MotoCom32" Alias "_BscMovjEx@32" (ByVal nCid%, ByVal spd#, ByVal framename$, ByVal rconf&, ByVal toolno%, p#, ByVal axisNum%) As Integer
Declare Function BscMovl Lib "MotoCom32" Alias "_BscMovl@32" (ByVal nCid%, ByVal vtype$, ByVal spd#, ByVal framename$, ByVal rconf%, ByVal toolno%, p#) As Integer
Declare Function BscMovlEx Lib "MotoCom32" Alias "_BscMovlEx@36" (ByVal nCid%, ByVal vtype$, ByVal spd#, ByVal framename$, ByVal rconf&, ByVal toolno%, p#, ByVal axisNum%) As Integer
Declare Function BscOpen Lib "MotoCom32" Alias "_BscOpen@8" (ByVal path$, ByVal mode%) As Integer
Declare Function BscOPLock Lib "MotoCom32" Alias "_BscOPLock@4" (ByVal nCid%) As Integer
Declare Function BscOPUnLock Lib "MotoCom32" Alias "_BscOPUnLock@4" (ByVal nCid%) As Integer
Declare Function BscOutBytes Lib "MotoCom32" Alias "_BscOutBytes@4" (ByVal nCid%) As Integer
Declare Function BscPMov Lib "MotoCom32" Alias "_BscPMov@28" (ByVal nCid%, ByVal movtype$, ByVal vtype$, ByVal spd#, ByVal toolno%, p#) As Integer
Declare Function BscPMovEx Lib "MotoCom32" Alias "_BscPMovEx@32" (ByVal nCid%, ByVal movtype$, ByVal vtype$, ByVal spd#, ByVal toolno%, p#, ByVal axisNum%) As Integer
Declare Function BscPMovj Lib "MotoCom32" Alias "_BscPMovj@20" (ByVal nCid%, ByVal spd#, ByVal toolno%, p#) As Integer
Declare Function BscPMovjEx Lib "MotoCom32" Alias "_BscPMovjEx@24" (ByVal nCid%, ByVal spd#, ByVal toolno%, p#, ByVal axisNum%) As Integer
